--- a/src/illustrator/web/templates/style_config.html
+++ b/src/illustrator/web/templates/style_config.html
@@ -18,13 +18,13 @@
 
 {% block content %}
 <div class="row justify-content-center">
-    <div class="col-lg-8">
+    <div class="col-lg-8 col-xl-6">
         <div class="card shadow">
             <div class="card-header">
-                <h5 class="mb-0 d-flex align-items-center">
+                <h3 class="mb-0 fw-bold d-flex align-items-center">
                     <span class="material-icons-outlined me-2">palette</span>
                     Configure Illustration Style
-                </h5>
+                </h3>
             </div>
             <div class="card-body">
                 <form id="styleConfigForm">
