--- a/src/illustrator/web/templates/base.html
+++ b/src/illustrator/web/templates/base.html
@@ -91,7 +91,7 @@
     <main class="container-fluid py-4" style="margin-top: 76px;">
         {% if title %}
         <div class="row mb-4">
-            <div class="col">
+            <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                 <div class="d-flex justify-content-between align-items-center">
                     <h1 class="h2 mb-0">
                         {% block page_icon %}{% endblock %}
