--- a/src/illustrator/web/templates/gallery.html
+++ b/src/illustrator/web/templates/gallery.html
@@ -18,11 +18,11 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-12">
+    <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2>
+            <h1 class="fw-bold">
                 <i class="bi bi-images me-2"></i>Illustration Gallery
-            </h2>
+            </h1>
             <div>
                 <button class="btn btn-outline-secondary me-2" onclick="refreshGallery()">
                     <i class="bi bi-arrow-clockwise me-2"></i>Refresh
