--- a/src/illustrator/web/templates/manuscript_form.html
+++ b/src/illustrator/web/templates/manuscript_form.html
@@ -25,7 +25,7 @@
 
 {% block content %}
 <div class="row justify-content-center">
-    <div class="col-lg-8">
+    <div class="col-lg-8 col-xl-6">
         <div class="card shadow">
             <div class="card-body">
                 <form id="manuscriptForm" class="needs-validation" novalidate>
