--- a/src/illustrator/web/templates/index.html
+++ b/src/illustrator/web/templates/index.html
@@ -123,7 +123,7 @@
 </div>
 
 <!-- Recent Manuscripts -->
-<div class="row">
+<div class="row recent-manuscripts-section">
     <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
