--- a/src/illustrator/web/templates/base.html
+++ b/src/illustrator/web/templates/base.html
@@ -73,7 +73,7 @@
                             </a></li>
                             <li><a class="dropdown-item d-flex align-items-center px-3 py-2 rounded-2 dropdown-item-modern" href="#" id="themeToggle">
                                 <span class="material-icons-outlined me-3 fs-6 text-primary">palette</span>
-                                Toggle Theme
+                                <span>Toggle Theme</span>
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item d-flex align-items-center px-3 py-2 rounded-2 dropdown-item-modern text-muted" href="#">
