--- a/src/illustrator/web/templates/style_config.html
+++ b/src/illustrator/web/templates/style_config.html
@@ -140,7 +140,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-3">
-                            <button type="button" class="btn btn-outline-secondary w-100 d-flex align-items-center justify-content-center" onclick="saveStyleConfig()">
+                            <button type="button" class="btn btn-secondary w-100 d-flex align-items-center justify-content-center" onclick="saveStyleConfig()">
                                 <span class="material-icons-outlined me-2">save</span>
                                 Save Style
                             </button>
