--- a/src/illustrator/web/templates/base.html
+++ b/src/illustrator/web/templates/base.html
@@ -22,6 +22,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@700&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="{{ url_for('static', path='/css/custom.css') }}" rel="stylesheet">
@@ -34,10 +35,10 @@
         <div class="container-fluid">
             <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2 mx-auto">
                 <div class="d-flex justify-content-between align-items-center w-100">
-                        <a class="navbar-brand fw-bold d-flex align-items-center text-gradient" href="/">
+                        <a class="navbar-brand fw-bold d-flex align-items-center" href="/">
                             <span class="material-icons-outlined me-2 fs-3" style="background: linear-gradient(45deg, #6366f1, #8b5cf6); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">auto_stories</span>
-                            <span class="d-none d-sm-inline">othertales Illustrator</span>
-                            <span class="d-inline d-sm-none">othertales</span>
+                            <span class="brand-title d-none d-sm-inline">OTHERTALES ILLUSTRATOR</span>
+                            <span class="brand-title d-inline d-sm-none">OTHERTALES ILLUSTRATOR</span>
                         </a>
 
                         <button class="navbar-toggler border-0 p-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
