--- a/src/illustrator/web/templates/index.html
+++ b/src/illustrator/web/templates/index.html
@@ -58,7 +58,7 @@
                     </h1>
                     <small class="opacity-75">
                         <i class="bi bi-book me-1"></i>
-                        <span id="chaptersTrend">Across all manuscripts</span>
+                        <span id="chaptersTrend">All Manuscripts</span>
                     </small>
                 </div>
                 <div class="stats-wave"></div>
