--- a/src/illustrator/web/templates/style_config.html
+++ b/src/illustrator/web/templates/style_config.html
@@ -134,25 +134,25 @@
                     <!-- Action Buttons -->
                     <div class="row g-2 mt-4">
                         <div class="col-12 col-md-3">
-                            <a href="/manuscript/{{ manuscript_id }}" class="btn btn-secondary w-100 d-flex align-items-center justify-content-center">
+                            <a href="/manuscript/{{ manuscript_id }}" class="btn btn-secondary w-100 d-flex align-items-center justify-content-center style-action-btn">
                                 <span class="material-icons-outlined me-2">arrow_back</span>
                                 Back to Manuscript
                             </a>
                         </div>
                         <div class="col-12 col-md-3">
-                            <button type="button" class="btn btn-secondary w-100 d-flex align-items-center justify-content-center" onclick="saveStyleConfig()">
+                            <button type="button" class="btn btn-secondary w-100 d-flex align-items-center justify-content-center style-action-btn" onclick="saveStyleConfig()">
                                 <span class="material-icons-outlined me-2">save</span>
                                 Save Style
                             </button>
                         </div>
                         <div class="col-12 col-md-3">
-                            <button type="button" class="btn btn-outline-primary w-100 d-flex align-items-center justify-content-center" onclick="previewStyle()">
+                            <button type="button" class="btn btn-outline-primary w-100 d-flex align-items-center justify-content-center style-action-btn" onclick="previewStyle()">
                                 <span class="material-icons-outlined me-2">preview</span>
                                 Preview Style
                             </button>
                         </div>
                         <div class="col-12 col-md-3">
-                            <button type="submit" class="btn btn-primary w-100 d-flex align-items-center justify-content-center">
+                            <button type="submit" class="btn btn-primary w-100 d-flex align-items-center justify-content-center style-action-btn">
                                 <span class="material-icons-outlined me-2">play_arrow</span>
                                 Start Processing
                             </button>
